<resources>
    <string name="app_name">Энергомониторинг</string>
    <string name="takePhotoScheme">Прикрепите фотографию схемы УУТЭ из проекта</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Некорректный логин</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="photo_is_not_loaded">Фото проекта не было ранее загружено!</string>
    <string name="continue_button">Продолжить</string>
    <string name="gallery">Галерея</string>
    <string name="take_photo">Сделать фото</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="san_pin_is_ok">Соответствие СанПИН</string>
    <string name="comments">Примечания</string>
    <string name="light_is_ok">Соответствие освещенности</string>
    <string name="check_main_data">Проверка основных данных</string>
    <string name="no_files_yet">Файлов еще нет</string>
    <string name="project_files">Файлы проекта</string>
    <string name="contact_number">Контактный номер</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="email">Почта</string>
    <string name="address">Адрес</string>
    <string name="organization_name">Название организации</string>
    <string name="agreement_number">Номер договора</string>
    <string name="contact_info">Контактная информация</string>
    <string name="add_project_file">Добавить файл к проекту</string>
    <string name="project_photo">Фото проекта</string>
    <string name="pick_from_gallery">Выбрать из галереи</string>
    <string name="choose_file">Выбрать файл</string>
    <string name="last_date_check">Дата окончания поверки</string>
    <string name="add_device">Добавить устройство</string>
    <string name="pressure_transducer">Преобразователь давления</string>
    <string name="device_name">Наименование модели</string>
    <string name="device_number">Номер модели</string>
    <string name="installation_place">Место установки</string>
    <string name="manufacturer">Производитель</string>
    <string name="sensor_range">Диапазон датчика</string>
    <string name="device_values">Показания на момент допуска</string>
    <string name="additional_comment">Примечания</string>
    <string name="flow_transducer">Преобразователь расхода</string>
    <string name="diameter">Диаметр</string>
    <string name="impulse_weight">Вес импульса</string>
    <string name="temperature_transducer">Преобразователь температуры</string>
    <string name="length">Длина</string>
    <string name="unit_system">Система измерения</string>
    <string name="modification">Модификация</string>
    <string name="interval">Межповерочный интервал</string>
    <string name="temperature_counter">Тепловычислитель</string>
    <string name="length_before_flow_transducer">Длина до расходомера</string>
    <string name="length_after_flow_transducer">Длина после расходомера</string>
    <string name="check_length_take_photo">Приложите линейку и сфотографируйте</string>
    <string name="flow_transducer_photo_description">Фото длины расходомера</string>
    <string name="device_type">Тип прибора</string>
    <string name="creating_new_device">Создание нового прибора</string>
    <string name="confirm">Завершить</string>
</resources>