<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:background="#E4FAFAFA"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <Button
        android:id="@+id/take_photo"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:drawableLeft="@drawable/ic_photo_camera"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/take_photo"
        android:textColor="#424141" />

    <Button
        android:id="@+id/pick_from_gallery"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:drawableLeft="@drawable/ic_baseline_photo_library_24"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/pick_from_gallery"
        android:textColor="#424141" />

    <Button
        android:id="@+id/choose_file"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:drawableLeft="@drawable/ic_file"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/choose_file"
        android:textColor="#424141"
        android:visibility="gone"/>

</LinearLayout>