<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.example.energo_monitoring.checks.ui.vm.GeneralInspectionVM" />
    </data>

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_horizontal">

            <TextView
                android:id="@+id/contact_info_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/contact_info"
                android:textColor="@color/title_color"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="@+id/commentEditTextLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/contact_info_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:padding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="@+id/commentEditTextLayout"
                app:layout_constraintStart_toStartOf="@id/contact_info_text"
                app:layout_constraintTop_toBottomOf="@+id/contact_info_text">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/agreementNumberLayout"
                        style="@style/MyDenseOutlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/agreement_number"
                        app:startIconDrawable="@drawable/ic_assignment">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/agreementNumberValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.agreementNumber}"
                            android:afterTextChanged="@{() -> viewModel.onAgreementNumChanged()}"
                            android:textColor="@color/contact_info_text_color"
                            tools:text="123" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/organizationLayout"
                        style="@style/MyDenseOutlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/organization_name"
                        app:startIconDrawable="@drawable/ic_city">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/organizationValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.organizationName}"
                            android:afterTextChanged="@{() -> viewModel.onOrganizationNameChanged()}"
                            android:textColor="@color/contact_info_text_color"
                            tools:text="123" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addressLayout"
                        style="@style/MyDenseOutlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/address"
                        app:startIconDrawable="@drawable/ic_place">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addressValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.address}"
                            android:afterTextChanged="@{() -> viewModel.onAddressChanged()}"
                            android:textColor="@color/contact_info_text_color"
                            tools:text="123" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLayout"
                        style="@style/MyDenseOutlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/email"
                        app:startIconDrawable="@drawable/ic_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.email}"
                            android:afterTextChanged="@{() -> viewModel.onEmailChanged()}"
                            android:textColor="@color/contact_info_text_color"
                            tools:text="123" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/representativeLayout"
                        style="@style/MyDenseOutlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/contact_person"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/representativeValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.contactPerson}"
                            android:afterTextChanged="@{() -> viewModel.onContactPersonChanged()}"
                            android:textColor="@color/contact_info_text_color"
                            tools:text="123" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneLayout"
                        style="@style/MyDenseOutlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/contact_number"
                        app:startIconDrawable="@drawable/ic_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.phone}"
                            android:afterTextChanged="@{() -> viewModel.onPhoneChanged()}"
                            android:textColor="@color/contact_info_text_color"
                            tools:text="123" />

                    </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/project_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/commentEditTextLayout"
                app:layout_constraintStart_toStartOf="@+id/contact_info_layout"
                app:layout_constraintTop_toBottomOf="@+id/contact_info_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="@integer/material_motion_duration_medium_1"
                    android:text="@string/project_files"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/_15ssp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/files_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/project_photo_height">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/project_photo_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:itemCount="3"
                        tools:listitem="@layout/project_file_list_item" />

                    <TextView
                        android:id="@+id/no_files_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_files_yet"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/add_file_button"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@drawable/circle_button"
                        android:src="@drawable/ic_add_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/add_project_file" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/checks_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/project_photo"
                app:layout_constraintStart_toStartOf="@id/project_photo"
                app:layout_constraintTop_toBottomOf="@id/project_photo">

                <TextView
                    android:id="@+id/inspectionGeneralText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/check_main_data"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/checks_layout_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/light_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/light_is_ok_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:text="@string/light_is_ok"
                            android:textSize="@dimen/_14ssp" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/light_toggle_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:singleSelection="true">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/light_yes_button"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/light_no_button"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sanpin_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/sanPin_is_ok_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/san_pin_is_ok"
                            android:textSize="@dimen/_14ssp" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/sanPin_toggle_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/sanPin_yes_button"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/sanPin_no_button"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>

                    </LinearLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commentEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/comments"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checks_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="17"
                    android:text="@={viewModel.comment}"
                    android:afterTextChanged="@{() -> viewModel.onCommentChanged()}"
                    android:inputType="textMultiLine"
                    tools:text="123" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>